--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -6,13 +6,15 @@
     "description": "Browse and Watch Twitch Livestreams/Videos with chat",
     "incognito": "split",
     "manifest_version": 2,
-    "name": "Simple Twitch UI",
+    "name": "Twitch Watcher",
     "permissions": [
         "*://*/*",
         "storage",
-        "unlimitedStorage"
+        "unlimitedStorage",
+        "webRequest",
+        "webRequestBlocking"
     ],
-    "short_name": "ST",
+    "short_name": "TwW",
     "browser_action": {
       "default_icon": {
         "32": "resources/icons/favicon-v1.png"
